<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/listButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/film_list"
        android:onClick="handleClickFilmListButton"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/profileButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/profil"
        android:onClick="handleClickProfilButton"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/watchlistButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/watchlist"
        android:onClick="handleClickWatchListButton"
        android:textColor="@android:color/white" />

</LinearLayout>