<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/create_user_page_username_text_field"
        app:layout_constraintStart_toStartOf="@+id/create_user_page_username_text_field"
        app:layout_constraintEnd_toEndOf="@+id/create_user_page_username_text_field" />

    <EditText
        android:id="@+id/create_user_page_username_text_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView" />

    <EditText
        android:id="@+id/create_user_page_password_text_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/create_user_select_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none"
        app:layout_constraintTop_toBottomOf="@+id/create_user_page_password_text_field"
        app:layout_constraintStart_toStartOf="@+id/create_user_page_password_text_field"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/datePickerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:textSize="14sp"
        android:onClick="showDatePickerDialog"
        app:layout_constraintBaseline_toBaselineOf="@+id/create_user_select_date"
        app:layout_constraintStart_toEndOf="@+id/create_user_select_date" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:onClick="handleClickCreateUserButton"
        app:layout_constraintTop_toBottomOf="@+id/create_user_select_date"
        app:layout_constraintStart_toStartOf="@+id/create_user_select_date"
        app:layout_constraintEnd_toEndOf="@+id/create_user_select_date"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
